using SOM class from the .py file

--- a/SOM.ipynb
+++ b/SOM.ipynb
@@ -255,7 +255,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Training SOM:\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
